Bug 4128 - Zobrazení scrollbaru u tlačítka "Odhlásit"

--- a/elza-web/src/main/resources/frontend/pages/shared/layout/PageLayout.less
+++ b/elza-web/src/main/resources/frontend/pages/shared/layout/PageLayout.less
@@ -20,7 +20,7 @@
     .app-header {
         //height: @header-height;
         border-bottom: 1px solid @app-header-border;
-        overflow-x:auto;
+        //overflow-x:auto;
         background-color:transparent;
 
     }
